--- a/panelDentista.html
+++ b/panelDentista.html
@@ -53,7 +53,7 @@
                         <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
                         <li class="elementoSubMenu"><a class="textoNegro" href="#">Citas</a></li>
                         <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
-                        <li class="elementoSubMenu"><a class="textoNegro" href="#">Pacientes</a></li>
+                        <li class="elementoSubMenu"><a class="textoNegro" href="panelDentistaPacientes.html">Pacientes</a></li>
                         <div class="w-100 d-block d-sm-block d-md-none py-3"></div>
                         <li class="elementoSubMenu"><a class="textoNegro" href="panelDentistaServicios.html">Servicios</a></li>
                     </ul>
