--- a/panelDentistaPacientes.html
+++ b/panelDentistaPacientes.html
@@ -63,54 +63,35 @@
     </div>
     <div class="container">
         <div class="row justify-content-center align-items-center py-3">
-            <div class="col-10 col-md-4">
-                <div class="mb-3">
-                    <label for="correoIngreso" class="form-label">Nombre del estudio:</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre">
-                    <small class="error" id="errorNombre"></small>
+            <div class="col-12 col-md-10">
+                <div class="row">
+                    <div class="col-12 col-md-8">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label">Nombre(s)</label>
+                                    <input type="text" class="form-control" id="nombre" name="nombre">
+                                    <small class="error" id="errorNombre"></small>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label">Apellido Paterno</label>
+                                    <input type="text" class="form-control" id="apellidoP" name="apellidoP">
+                                    <small class="error" id="errorNombre"></small>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label">Apellido Materno</label>
+                                    <input type="text" class="form-control" id="apellidoM" name="apellidoM">
+                                    <small class="error" id="errorNombre"></small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4"></div>
                 </div>
-                <div class="mb-3">
-                    <label for="correoIngreso" class="form-label">Descripción del estudio:</label>
-                    <textarea class="form-control" id="descripcion" name="descripcion" rows="5"></textarea>
-                    <small class="error" id="errorDescripcion"></small>
-                </div>
-                <div class="mb-3">
-                    <label for="tipo" class="form-label">Tipo de estudio:</label>
-                    <select class="form-select" name="tipo" id="tipo">
-                        <option value="Division">Division</option>
-                        <option value="Restauraciones Dentales">Restauraciones Dentales</option>
-                        <option value="Protesis Dentales">Protesis Dentales</option>
-                        <option value="Cirugias Dentales">Cirugias Dentales</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="precio" class="form-label">Precio:</label>
-                    <input type="number" class="form-control" id="precio" name="precio" value="0">
-                    <small class="error" id="errorPrecio"></small>
-                </div>
-                <div class="mb-3 textoCentro">
-                    <button class="btn btn-dark" id="crear" name="crear" disabled>Crear/Modificar</button>
-                    <div class="w-100 d-block d-sm-block d-md-block d-xl-none py-1"></div>
-                    <button class="btn btn-primary" id="cancelarModificar" name="cancelarModificar" disabled>Cancelar Modificación</button>
-                    <div class="w-100 py-1"></div>
-                    <small class="error" id="errorCrear" name="errorCrear"></small>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center align-items-center py-3">
-            <div class="col-12">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Descripcion</th>
-                            <th scope="col">Tipo</th>
-                            <th scope="col">Accion</th>
-                        </tr>
-                    </thead>
-                    <tbody id="servicios"></tbody>
-                </table>
             </div>
         </div>
     </div>
