--- a/citas.html
+++ b/citas.html
@@ -119,6 +119,9 @@
                                 <select class="form-select" name="hora" id="hora">
                                 </select>
                             </div>
+                            <div class="mb-3">
+                                <button class="btn btn-dark" id="crearCita" disabled>Crear Cita</button>
+                            </div>
                         </div>
                     </div>
                 </div>
