--- a/index.html
+++ b/index.html
@@ -16,29 +16,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                <ul class="navbar-nav align-items-center">
-                    <li class="nav-item elementoMenu">
-                        <a href="index.html" aria-current="page">Inicio</a>
-                    </li>
-                    <li class="nav-item elementoMenu">
-                        <a href="servicios.html" aria-current="page">Servicios</a>
-                    </li>
-                    <li class="nav-item elementoMenu">
-                        <a href="#" aria-current="page">Sobre Nosotros</a>
-                    </li>
-                    <li class="nav-item elementoMenu">
-                        <a href="#" aria-current="page">Contacto</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="img/perfil.png" alt="foto perfil" width="30px" height="30px">
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
-                          <li><a class="dropdown-item" href="registro.html">Registrarse</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                
             </div>
         </div>
     </nav>
@@ -64,5 +42,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
     <script src="js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
